--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <script src="time-tracking.js"></script>
 
     <script>
-        const API_BASE_URL = 'http://localhost:3000';
+        const API_BASE_URL = 'http://localhost:3000/asset-tracking-api';
         //const API_BASE_URL = 'https://api.aneeshprasobhan.xyz/asset-tracking-api';    // Use this line for netcup deployment (Aneesh Server)
 
         const API_ENDPOINTS = {
