--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <script src="time-tracking.js"></script>
 
     <script>
-        //const API_BASE_URL = 'http://localhost:3000';
-        const API_BASE_URL = 'https://api.aneeshprasobhan.xyz';    // Use this line for netcup deployment (Aneesh Server)
+        const API_BASE_URL = 'http://localhost:3000';
+        //const API_BASE_URL = 'https://api.aneeshprasobhan.xyz';    // Use this line for netcup deployment (Aneesh Server)
 
         const API_ENDPOINTS = {
             ZONES: `${API_BASE_URL}/zones`,
